--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+    <section>
+        <div>
+        <a href="/"><h1></h1></a>
+        </div>
+        <nav>
+            <a href="#about-me">About me</a>
+            <a href="#skills">Skills</a>
+            <a href="#my-work">Portfolio</a>
+           
+        </nav>
+    </section>
+</header>
