--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,3 +1,40 @@
-body {
-    background-image: radial-gradient(circle, #FFFFFF, #EAF0FF);
+section {
+    height: 100vh;
+    width: 100%;
+    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
+    margin-top: 100px;
+    color: #5988FF;
+}
+
+h1 {
+    font-family: 'Baloo 2';
+    font-weight: 800;
+    font-size: 128px;
+    line-height: 1;
+    flex: 1;
+}
+
+.first {
+    font-size: 138px;
+}
+
+span {
+    font-family: 'Montserrat';
+    font-size: 64px;
+}
+
+.wrapper {
+    margin-left: 8%;
+    margin-right: 8%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.frontend-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.right-content {
+    margin-top: 20%;
 }
