--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,2 +1,6 @@
+<app-about-me id="about-me"></app-about-me>
+<app-skills id="skills"></app-skills>
 
-<app-about-me></app-about-me>
+<app-my-work id="portfolio"></app-my-work>
+<app-references></app-references>
+<app-contact id="contact"></app-contact>
