renamed folder in landing-page

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,9 +1,1 @@
-<section>
-    <div class="wrapper">
-        <div class="left-content"></div>
-        <div class="right-content"> <span>Hallo! A am Galina</span>
-            <div class="frontend-wrapper"><h1 class="first">FRONTEND</h1> <h1>DEVELOPER</h1></div>
-           
-        </div>
-    </div>
-</section>
+<p>about-me works!</p>
