--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
         <nav>
             <a href="#about-me">About me</a>
             <a href="#skills">Skills</a>
-            <a href="#my-work">Portfolio</a>
+            <a href="#my-work">My work</a>
            
         </nav>
     </section>
