about-me section html and scss

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,1 +1,25 @@
-<p>about-me works!</p>
+<section>
+    <div class="content-wrapper">
+        <div class="left-content">
+            <h1>Let's work together</h1>
+        </div>
+        <div class="right-content">
+            <div class="text-content">
+                <span> Hi, I'm a German-speaking Frontend Developer based near Erfurt. I'm driven by the endless
+                    possibilities in
+                    IT, and
+                    I'm passionate about creating visually stunning and user-friendly websites and applications. <br>My
+                    ability
+                    to
+                    solve complex problems and my passion for programming make me a valuable member for your team.
+                    <br> <br>
+                    If you think I’d be a good match for your projects, contact me!</span>
+                        <a href="#contact"><button>Send a message</button></a>    
+            </div>
+
+
+    
+
+        </div>
+    </div>
+</section>
