--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="wrapper">
+    <div class="content-wrapper">
         <div class="left-content"></div>
         <div class="right-content">
             <span>Hallo! Ich bin Galina</span>
