--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -10,7 +10,6 @@ h1 {
     font-family: 'Baloo 2';
     font-weight: 800;
     font-size: 128px;
-    line-height: 1;
 }
 
 .first {
@@ -22,7 +21,7 @@ span {
     font-size: 64px;
 }
 
-.wrapper {
+.content-wrapper {
     margin-left: 8%;
     margin-right: 8%;
     display: flex;
