--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,29 @@
     scroll-behavior: smooth;
   }
 
+  h1 {
+    line-height: 1;
+  }
+
+  button {
+    white-space: nowrap;
+    margin-top: 10px;
+    color: #5988FF;
+    padding: 10px 20px;
+    border: solid 2px;
+    border-radius: 8px;
+    border-color: #5988FF;
+    background-color: white;
+    cursor: pointer;
+    font-size: 23px;
+  
+    &:hover {
+      background-color: #5988FF;
+      color: white;
+      transform: scale(1.05);
+    }
+  }
+
 /* baloo-2-regular - latin */
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
