added skills section with html and scss

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -16,6 +16,7 @@ section {
     display: flex;
     justify-content: space-between;
     padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .left-content {
