added footer html and css

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
     <div class="content-wrapper">
         <div class="left-content"></div>
         <div class="right-content">
-            <span>Hallo! Ich bin Galina</span>
+            <span>Hello! I am Galina</span>
             <div class="frontend-wrapper">
                 <h1 class="first">FRONTEND</h1> 
                 <h1>DEVELOPER</h1>
