--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,4 +1,9 @@
 <section id="imprint">
+
+    <div class="circle circle1"></div>
+    <div class="circle circle2"></div>
+    <div class="circle circle3"></div>
+    
     <h2>Impressum</h2>
     <br>
     <span>Galina Antipin</span>
