--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,6 +1,8 @@
 <section>
     <div class="content-wrapper">
-        <div class="left-content"></div>
+        <div class="left-content">
+            <div class="circle"></div>
+        </div>
         <div class="right-content">
             <span>Hello! I am Galina</span>
             <div class="frontend-wrapper">
