--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -72,3 +72,14 @@ span {
         }
     }
 }
+
+.circle {
+    position: absolute; 
+    border-radius: 50%;
+    background: radial-gradient(circle, #5988FF, #0043F0); 
+    opacity: 0.8; 
+    height: 80%;
+    width: 40%;
+    top: -15%;
+    left: -5%; 
+}
