some sccs on aboutme section

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,9 +1,11 @@
 <section>
     <div class="content-wrapper">
         <div class="left-content">
-            <h1>Let's work together</h1>
+            <h1 >Let's work together</h1>
         </div>
         <div class="right-content">
+            <div class="circle"></div>
+            <div class="circle1"></div>
             <div class="text-content">
                 <span> Hi, I'm a German-speaking Frontend Developer based near Erfurt. I'm driven by the endless
                     possibilities in
