--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -2,6 +2,7 @@ section {
     width: 100%;
     max-width: 1920px;
     background-color: white;
+    position: relative;
 
     h1 {
         color: #5988FF;
@@ -15,7 +16,7 @@ section {
     margin-right: 8%;
     display: flex;
     justify-content: space-between;
-    padding-top: 5%;
+    padding-top: 8%;
     padding-bottom: 5%;
 }
 
@@ -40,4 +41,26 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.circle {
+    position: absolute; 
+    border-radius: 50%;
+    background: radial-gradient(circle, #5988FF, #0043F0); 
+    opacity: 0.8; 
+    height: 10%;
+    width: 4%;
+    top: 3%;
+    right: 20%; 
+}
+
+.circle1 {
+    position: absolute; 
+    border-radius: 50%;
+    background: radial-gradient(circle, #5988FF, #0043F0); 
+    opacity: 0.8; 
+    height: 30%;
+    width: 12%;
+    top: 5%;
+    right: 50%; 
 }
