--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,6 +9,7 @@ header {
     height: 100px;
     z-index: 1;
     font-family: 'Montserrat';
+    background-color: white;
 
     a {
         text-decoration: none;
