--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,1 +1,43 @@
-<p>contact works!</p>
+<!-- <section>
+    <div class="contact-headline">
+        <div class="left-line"></div>
+        <h1>Contact</h1>
+    </div>
+    <div class="contact-wrapper">
+        <div class="left-content" data-aos="fade-right">
+            <p>If you have any questions, want to share some thoughts, or want to team up
+                on a project - feel free to <b>drop me a message!</b></p>
+        </div>
+        <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm" data-aos="fade-left">
+            <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
+                placeholder="Your name" required [ngClass]="{'invalid': !name.valid && name.touched}">
+            @if (!name.valid && name.touched) {
+            <span>Please enter your name</span>
+            }
+            <input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email" placeholder="Your email"
+                required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+                [ngClass]="{'invalid': !email.valid && email.touched}">
+            @if (!email.valid && email.touched) {
+            <span>Please enter a valid email</span>
+            }
+            <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
+                placeholder="Your message" required
+                [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
+            @if (!message.valid && message.touched) {
+            <span>Please enter a message</span>
+            }
+
+            <div class="checkbox-wrapper">
+                <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
+                <label for="privacy">I've read the <a routerLink="privacy-policy">privacy policy</a> and agree to the
+                    processing of my data as outlined.</label>
+            </div>
+
+            <span class="error">Please accept the privacy policy.</span>
+            <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">Send
+                message :)</button>
+        </form>
+    </div>
+    <div class="go-back-arrow"> <a href="#hero"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
+        </a></div>
+</section> -->
