--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -1,5 +1,12 @@
 <section id="my-work">
-    <h1>Portfolio</h1>
+    <div class="circle circle1"></div>
+    <div class="circle circle2"></div>
+    <div class="circle circle3"></div>
+    <div class="circle circle4"></div>
+    <div class="circle circle5"></div>
+
+
+    <h1>My work</h1>
     <h2>Explore a selection of my work here - Interact with projects to see my skills in action. </h2>
     <div class="portfolio-wrapper">
 
