--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,7 +1,16 @@
 <section>
     <div class="content-wrapper">
         <div class="left-content">
-            <h1 >Let's work together</h1>
+            <div class="headline">
+                <h1 class="white-space-nowrap">Let's work</h1> <h1>together</h1>
+                <h2>I am</h2>
+            </div>
+            <div class="icons-section">
+                <img src="./../../../assets/img/location-icon.png" alt="Location Icon">
+                <span>located in Thuringia</span>
+                <img src="./../../../assets/img/remote-icon.png" alt="Remote Icon">
+                <span>open to work remote</span>
+            </div>
         </div>
         <div class="right-content">
             <div class="circle"></div>
@@ -16,11 +25,11 @@
                     solve complex problems and my passion for programming make me a valuable member for your team.
                     <br> <br>
                     If you think I’d be a good match for your projects, contact me!</span>
-                        <a href="#contact"><button>Send a message</button></a>    
+                <a href="#contact"><button>Send a message</button></a>
             </div>
 
 
-    
+
 
         </div>
     </div>
