--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -7,8 +7,20 @@ section {
     h1 {
         color: #5988FF;
         font-family: 'Baloo 2';
-        font-size: 121px;
+        font-size: 98px;
     }
+}
+
+h2 {
+    color: #5988FF;
+    font-family: 'Baloo 2';
+    font-size: 38px;
+}
+
+.headline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content-wrapper {
@@ -21,7 +33,11 @@ section {
 }
 
 .left-content {
-    width: 50%;
+
+    span {
+        color: #5988FF;
+        font-family: 'Montserrat';
+    }
 }
 
 .right-content {
@@ -63,4 +79,16 @@ section {
     width: 12%;
     top: 5%;
     right: 50%; 
+}
+
+.icons-section {
+    text-align: center;
+
+    img {
+        margin-right: 1%;
+    }
+}
+
+.white-space-nowrap {
+    white-space: nowrap;
 }
