--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -1,5 +1,5 @@
 section {
-    height: 100vh;
+    height: calc(100vh - 100px);
     width: 100%;
     background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
     margin-top: 100px;
