--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -13,8 +13,9 @@ section {
 h1 {
     font-family: 'Baloo 2';
     font-weight: 800;
-    font-size: 128px;
+    font-size: 96px;
     color: white;
+    margin-bottom: 2%;
 }
 
 .img-wrapper {
@@ -25,7 +26,7 @@ h1 {
     padding: 3%;
 
     img {
-        width: 50px;
+        width: 70px;
         margin-bottom: 10px;
         transition: transform 0.3s;
 
