--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,12 +1,13 @@
 <section>
     <div class="content-wrapper">
         <div class="left-content">
+            <img src="./../../../assets/img/" alt="My Foto" class="profile-image"> 
             <div class="circle"></div>
         </div>
         <div class="right-content">
             <span>Hello! I am Galina</span>
             <div class="frontend-wrapper">
-                <h1 class="first">FRONTEND</h1> 
+                <h1 class="first">FRONTEND</h1>
                 <h1>DEVELOPER</h1>
             </div>
             <span class="scroll-span">SCROLL</span>
