new circles on my work section

--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -5,8 +5,17 @@ section {
     margin-right: 8%;
     margin-left: 8%;
     scroll-margin-top: 250px;
-    margin-top: 5%;
+    padding-top: 6%;
     position: relative;
+    background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+    background-size: 6%, 8%, 30%, 10%, 4%;
+    background-position:
+        30% 1.5%,
+        80% 50%,
+        -20% 50%,
+        90% 15%,
+        50% 99%;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
 }
 
 p {
@@ -111,46 +120,4 @@ img {
 
 .text-align-left {
     text-align: left;
-}
-
-.circle {
-    position: absolute;
-    border-radius: 50%;
-    background: radial-gradient(circle, #5988FF, #0043F0);
-    opacity: 0.8;
-}
-
-.circle1 {
-    height: 22%;
-    width: 22%;
-    bottom: 45%;
-    left: -15%;
-}
-
-.circle2 {
-    width: 7%;
-    height: 7%;
-    top: -5%;
-    left: 28%;
-}
-
-.circle3 {
-    width: 15%;
-    height: 15%;
-    top: -5%;
-    right: 5%;
-}
-
-.circle4 {
-    width: 22%;
-    height: 22%;
-    bottom: 15%;
-    right: -15%;
-}
-
-.circle5 {
-    width: 7%;
-    height: 7%;
-    bottom: 5%;
-    left: 5%;
 }
