--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -8,11 +8,11 @@ section {
     padding-top: 6%;
     position: relative;
     background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-    background-size: 6%, 8%, 30%, 10%, 4%;
+    background-size: 6%, 8%, 20%, 10%, 4%;
     background-position:
         30% 1.5%,
         80% 50%,
-        -20% 50%,
+        5% 50%,
         90% 15%,
         50% 99%;
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
@@ -76,10 +76,12 @@ h3 {
     display: flex;
     justify-content: flex-start;
     transition: transform 0.2s ease;
+    padding-right: 2%;
 
     &:hover {
         transform: scale(1.2);
         cursor: pointer;
+        opacity: 0.7;
     }
 }
 
@@ -102,6 +104,7 @@ h1 {
     &:hover {
         transform: scale(1.2);
         cursor: pointer;
+        opacity: 0.7;
 
     }
 }
