--- a/src/app/main-content/my-work/my-work.component.html
+++ b/src/app/main-content/my-work/my-work.component.html
@@ -1,54 +1,58 @@
 <section id="my-work">
-    <h1>My work</h1>
-    <h2>Explore a selection of my work here - Interact with projects to see my skills in action. </h2>
-    <div class="portfolio-wrapper">
+    <div class="my-work-wrapper">
+        <h1>My work</h1>
+        <h2>Explore a selection of my work here - Interact with projects to see my skills in action. </h2>
+        <div class="portfolio-wrapper">
 
-        <div class="left-content" data-aos="fade-right">
-            <p>Join</p>
-            <h3>JavaScript | Firebase | HTML | CSS</h3>
-            <span> Task Manager inpired by the Kanban System. Create and organize tasks using drag and drop functions,
-                assign users and categories. </span>
-            <div class="button-section"> <button class="test-button">Live test</button>
-                <div class="space-between-buttons"></div>
-                <button class="github-button">GitHub</button>
+            <div class="left-content" data-aos="fade-right">
+                <p>Join</p>
+                <h3>JavaScript | Firebase | HTML | CSS</h3>
+                <span> Task Manager inpired by the Kanban System. Create and organize tasks using drag and drop
+                    functions,
+                    assign users and categories. </span>
+                <div class="button-section"> <button class="test-button">Live test</button>
+                    <div class="space-between-buttons"></div>
+                    <button class="github-button">GitHub</button>
+                </div>
+            </div>
+            <div class="right-content" data-aos="fade-left">
+                <img src="./../../../assets/img/join-img.png" alt="Join Project">
             </div>
         </div>
-        <div class="right-content" data-aos="fade-left">
-            <img src="./../../../assets/img/join-img.png" alt="Join Project">
-        </div>
-    </div>
 
-    <div class="portfolio-wrapper">
+        <div class="portfolio-wrapper">
 
-        <div class="left-content-middle" data-aos="fade-right">
-            <img src="./../../../assets/img/game-img.png" alt="El Pollo Loco Project">
-        </div>
-        <div class="right-content-middle" data-aos="fade-left">
-            <p>El Pollo Loco</p>
-            <h3>JavaScript | HTML | CSS</h3>
-            <span class="text-align-left"> Jump, run and throw game based on object-oriented approach. Help Pepe to find coins and tabasco salsa
-                to fight against the crazy hen. </span>
-            <div class="button-section"> 
-                <button class="test-button">Live test</button>
-                <div class="space-between-buttons"></div>
-                <button class="github-button">GitHub</button>
+            <div class="left-content-middle" data-aos="fade-right">
+                <img src="./../../../assets/img/game-img.png" alt="El Pollo Loco Project">
+            </div>
+            <div class="right-content-middle" data-aos="fade-left">
+                <p>El Pollo Loco</p>
+                <h3>JavaScript | HTML | CSS</h3>
+                <span class="text-align-left"> Jump, run and throw game based on object-oriented approach. Help Pepe to
+                    find coins and tabasco salsa
+                    to fight against the crazy hen. </span>
+                <div class="button-section">
+                    <button class="test-button">Live test</button>
+                    <div class="space-between-buttons"></div>
+                    <button class="github-button">GitHub</button>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="portfolio-wrapper">
+        <div class="portfolio-wrapper">
 
-        <div class="left-content" data-aos="fade-right">
-            <p>Pokédex</p>
-            <h3>JavaScript | HTML | CSS | Api</h3>
-            <span> Based on a PokéAPI a simple library that provides and catalogues pokemon information. </span>
-            <div class="button-section"> <button class="test-button">Live test</button>
-                <div class="space-between-buttons"></div>
-                <button class="github-button">GitHub</button>
+            <div class="left-content" data-aos="fade-right">
+                <p>Pokédex</p>
+                <h3>JavaScript | HTML | CSS | Api</h3>
+                <span> Based on a PokéAPI a simple library that provides and catalogues pokemon information. </span>
+                <div class="button-section"> <button class="test-button">Live test</button>
+                    <div class="space-between-buttons"></div>
+                    <button class="github-button">GitHub</button>
+                </div>
             </div>
-        </div>
-        <div class="right-content" data-aos="fade-left">
-            <img src="./../../../assets/img/pokedex-img.png" alt="Join Project">
+            <div class="right-content" data-aos="fade-left">
+                <img src="./../../../assets/img/pokedex-img.png" alt="Join Project">
+            </div>
         </div>
     </div>
 
