--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -24,6 +24,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    text-align: center;
     padding-top: 50px;
 }
 
@@ -46,4 +47,6 @@ footer {
 p {
     font-size: 23px;
     font-family: 'Montserrat';
+    margin-bottom: 10%;
+    padding-top: 15%;
 }
