--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -2,8 +2,10 @@ section {
     height: calc(100vh - 100px);
     width: 100%;
     background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
-    margin-top: 100px;
     color: #5988FF;
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
 
 h1 {
@@ -24,8 +26,10 @@ span {
 .content-wrapper {
     margin-left: 8%;
     margin-right: 8%;
+    max-width: 1920px;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .frontend-wrapper {
@@ -33,6 +37,7 @@ span {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .right-content {
