--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -2,6 +2,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     position: fixed;
     top: 0;
     left: 0;
