added references component html and scss

--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -1,5 +1,5 @@
 section {
-    background: linear-gradient(to bottom, #5988FF, #0043F0);
+    background: linear-gradient(to bottom, #81a3fa, #4c74da);
     padding-top: 5%;
     padding-bottom: 5%;
     width: 100%;
