--- a/src/app/main-content/references/references.component.html
+++ b/src/app/main-content/references/references.component.html
@@ -1,1 +1,19 @@
-<p>references works!</p>
+<section>
+    <div class="content-wrapper">
+        <div class="headline">
+            <h1>Need a teamplayer?</h1>
+            <span>Here what my colleagues said about me</span>
+        </div>
+        <div class="references">
+
+            @for (reference of references; track $index) {
+            <div class="reference-card">
+                <h3>{{ reference.name }}</h3>
+                <h4>Project {{ reference.project }}</h4>
+                <br>
+                <p>{{ reference.reference }}</p>
+            </div>
+}
+        </div>
+    </div>
+</section>
