--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -1,113 +1,125 @@
-// section {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: space-between;
-//     width: 100%;
-//     max-width: 1920px;
-//     scroll-margin-top: 100px;
+section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
-//     img {
-//         height: 39px;
-//         width: 39px;
-//         display: flex;
-//     }
-// }
+    h1 {
+        font-family: 'Baloo 2';
+        font-size: 90px;
+        font-weight: 800;
+        color: #5988FF;
+    }
 
-// .go-back-arrow {
-//     display: flex;
-//     justify-content: flex-end;
-//     margin-right: 8%;
-//     margin-top: 8%;
-//     cursor: pointer;
+    h2 {
+        color: #5988FF;
+        font-family: 'Montserrat';
+        font-size: 32px;
+        font-weight: 700;
+    }
 
-//     &:hover svg path {
-//         fill: #70e61c;
-//     }
-// }
+    h3 {
+        color: #5988FF;
+        font-family: 'Montserrat';
+        font-weight: 400;
+        font-size: 16px;
+    }
 
-// span {
-//     color: red;
-//     font-size: 1vw;
-// }
+    p {
+        color: black;
+        font-family: 'Montserrat';
+        font-size: 16px;
+        font-weight: 400;
+    }
 
-// p {
-//     color: white;
-//     font-weight:400 ;
-//     font-size: 16px;
-// }
+    img {
+        height: 30px;
+        width: 30px;
+        margin-top: 50%;
+    }
+}
 
-// .contact-wrapper {
-//     display: flex;
-// }
+.contact-wrapper {
+    display: flex;
+    max-width: 1920px;
+    width: 100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 8%;
+    margin-right: 8%;
+}
 
-// .contact-headline {
-//     display: flex;
-//     align-items: center;
-// }
+span {
+    font-family: 'Montserrat';
+    color: red;
+    font-size: 16px;
+}
 
-// .left-content {
-//     width: 50%;
-//     margin-left: 8%;
-// }
+p {
+    color: black;
+    font-weight: 400;
+    font-size: 16px;
+}
 
-// form {
-//     display: flex;
-//     flex-direction: column;
-//     width: 50%;
-//     margin-left: 10%;
-//     margin-right: 8%;
-// }
+form {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    justify-content: flex-start;
+}
 
-// input, textarea {
-//     border: 1px solid #9747FF;
-//     border-radius: 10px; 
-//     padding: 10px;
-//     margin-bottom: 20px;
-//     color: white;
-//     background-color: #141D2F;
+input,
+textarea {
+    font-family: 'Montserrat';
+    border: 1px solid #5988FF;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: black;
 
-//     &:hover {
-//         border-color: #70E61C; 
-//     }
+    &:hover {
+        border: 2px solid #5988FF;
+    }
 
-//     &:focus {
-//         border-color: red;
-//         background-image: url('./../../../assets/img/warning-icon.png'); 
-//         background-repeat: no-repeat; 
-//         background-position: right 10px center;
-//     }
+    &:focus {
+        border: 1px solid #5988FF;
+        background-image: url('./../../../assets/img/warning-icon.png');
+        background-repeat: no-repeat;
+        background-position: right 10px center;
+    }
 
-//     &:valid {
-//         border-color: #70E61C; 
-//         background-image: url('./../../../assets/img/check-icon.png');
-//         background-position: right 10px center; 
-//         background-repeat: no-repeat; 
-//     }
+    &:valid {
+        border: 1px solid #5988FF;
+        background-image: url('./../../../assets/img/check-icon.png');
+        background-position: right 10px center;
+        background-repeat: no-repeat;
+    }
 
-//     &.invalid {
-//         border-color: red;
-//         background-image: url('./../../../assets/img/warning-icon.png'); 
-//         background-position: right 10px center; 
-//         background-repeat: no-repeat;
-//     }
-// }
+    &.invalid {
+        background-image: url('./../../../assets/img/warning-icon.png');
+        background-position: right 10px center;
+        background-repeat: no-repeat;
+    }
+}
 
-// textarea {
-//     height: 100px; 
-// }
+textarea {
+    height: 100px;
+}
 
-// input[type="checkbox"] {
-//     border-color: #70e61c;
-//     margin-right: 10px;
-//     background-color: #141D2F;
-// }
+input[type="checkbox"] {
+    margin-right: 10px;
+}
 
-// label {
-//     color: white; 
-// }
+label {
+    color: black;
+    font-family: 'Montserrat';
+}
 
-// a{
-//     color: #9747FF; 
-//     text-decoration: none;
-// }
+a {
+    color: #5988FF;
+    text-decoration: none;
 
+    &:hover {
+        text-decoration: underline;
+        font-weight: bold;
+    }
+}
