--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -1,8 +1,7 @@
-<section>
-
+<section id="landing-page">
     <div class="content-wrapper">
         <div class="left-content">
-            <img src="./../../../assets/img/G Farb w (1).png" alt="My Foto" class="profile-image"> 
+            <img src="./../../../assets/img/G Farb w (1).png" alt="My Foto" class="profile-image">
             <div class="circle"></div>
         </div>
         <div class="right-content">
