--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,42 +1,47 @@
 <section>
     <div class="contact-wrapper">
-        <div class="left-content">
-            <h1>Contact</h1> <br>
-            <h2>Got a problem to solve?</h2> <br><br>
-            <p>Contact me through this form, I am interested in hearing from you, knowing your ideas and
-                contributing to your projects with my work.
-            </p> <br>
-            <h3>Need a Frontend developer? <b>Contact me!</b></h3>
-            <a href="#landing-page"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
-            </a>
+        <div class="header">
+            <h1>Contact</h1>
         </div>
-        <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
-            <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
-                placeholder="Your name" required [ngClass]="{'invalid': !name.valid && name.touched}">
-            @if (!name.valid && name.touched) {
-            <span>Your name is required</span>
-            }
-            <input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email" placeholder="Your email"
-                required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
-                [ngClass]="{'invalid': !email.valid && email.touched}">
-            @if (!email.valid && email.touched) {
-            <span>Your email is required</span>
-            }
-            <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
-                placeholder="Your message" required
-                [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
-            @if (!message.valid && message.touched) {
-            <span>Your message is empty</span>
-            }
-            <div class="checkbox-wrapper">
-                <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
-                <label for="privacy">I've read the <a routerLink="privacy-policy">privacy policy</a> and agree to the
-                    processing of my data as outlined.</label>
+        <div class="content">
+            <div class="left-content">
+                <h2>Got a problem to solve?</h2> <br><br>
+                <p>Contact me through this form, I am interested in hearing from you, knowing your ideas and
+                    contributing to your projects with my work.
+                </p> <br>
+                <h3>Need a Frontend developer? <b>Contact me!</b></h3>
+                <a href="#landing-page"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
+                </a>
             </div>
-            <span class="error" [ngClass]="{'invalid': !message.valid && message.touched}">Please accept the privacy policy.</span>
-            <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">Send
-                message :)</button>
-        </form>
+            <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+                <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
+                    placeholder="Your name" required [ngClass]="{'invalid': !name.valid && name.touched}">
+                @if (!name.valid && name.touched) {
+                <span>Your name is required</span>
+                }
+                <input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
+                    placeholder="Your email" required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+                    [ngClass]="{'invalid': !email.valid && email.touched}">
+                @if (!email.valid && email.touched) {
+                <span>Your email is required</span>
+                }
+                <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
+                    placeholder="Your message" required
+                    [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
+                @if (!message.valid && message.touched) {
+                <span>Your message is empty</span>
+                }
+                <div class="checkbox-wrapper">
+                    <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
+                    <label for="privacy">I've read the <a routerLink="privacy-policy">privacy policy</a> and agree to
+                        the
+                        processing of my data as outlined.</label>
+                </div>
+                <span class="error" [ngClass]="{'invalid': !message.valid && message.touched}">Please accept the privacy
+                    policy.</span>
+                <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">Send
+                    message :)</button>
+            </form>
+        </div>
     </div>
-
 </section>
