--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,18 +1,19 @@
 <section id="imprint">
-    <h2>Impressum</h2>
-    <br>
-    <span>Galina Antipin</span>
+    <div class="wrapper">
+        <h2>Impressum</h2>
+        <br>
+        <span>Galina Antipin</span>
 
-    <span>Schachtstraße 20</span>
-    <span>06577 Oberheldrungen</span>
-    <br> <span> Kontakt:</span>
-    <span> galina.antipin&#64;gmail.com</span>
-    <span> 0172 2594032</span>
+        <span>Schachtstraße 20</span>
+        <span>06577 Oberheldrungen</span>
+        <br> <span> Kontakt:</span>
+        <span> galina.antipin&#64;gmail.com</span>
+        <span> 0172 2594032</span>
 
-    <br>
-    <span>Erstellt von impressum-generator.info </span>
-    <span>powered by abfindungshero.de</span>
-    <br>
-    <span>Angaben gemäß Par. 5 DDG</span>
-
+        <br>
+        <span>Erstellt von impressum-generator.info </span>
+        <span>powered by abfindungshero.de</span>
+        <br>
+        <span>Angaben gemäß Par. 5 DDG</span>
+    </div>
 </section>
