--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,19 +1,20 @@
 section {
-    margin-top: 5%;
-    flex: 1;
-    height: calc(100vh - 300px);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 5%;
-    margin-left: 8%;
+    height: calc(100vh - 320px);
+    width: 100%;
     font-family: 'Montserrat';
-    position: relative;
-    overflow: hidden;
     background-image: url('./../../assets/img/circle.png'), url('/../../assets/img/circle.png'), url('/../../assets/img/circle.png');
     background-size: 12%, 15%;
     background-repeat: no-repeat;
     background-position: center -18%, bottom 15% right 3%, 20% 90%;
+}
+
+.wrapper {
+    max-width: 1920px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-left: 8%;
+    margin-right: 8%;
 }
 
 h2 {
@@ -21,4 +22,10 @@ h2 {
     font-weight: 800;
     font-size: 48px;
     color: #5988FF;
+}
+
+span {
+    font-family: 'Montserrat';
+    font-size: 18px;
+    color: black;
 }
