edit code spacing

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,9 +1,6 @@
 <section id="privacy-policy">
-
     <div class="wrapper">
-
         <h2>Datenschutz­erklärung</h2>
-
         <h3>1. Datenschutz auf einen Blick</h3>
         <br>
         <h3>Allgemeine Hinweise</h3>
@@ -25,7 +22,6 @@
         </span>
         <br><br>
         <h3>Wie erfassen wir Ihre Daten?</h3>
-
         <span>Ihre Daten werden zum einen dadurch erhoben, dass Sie uns diese
             mitteilen. Hierbei kann es sich z. B. um Daten handeln, die Sie in ein
             Kontaktformular eingeben. Andere Daten werden automatisch oder nach
@@ -56,7 +52,9 @@
         </span>
         <br><br>
         <h3>2. Allgemeine Hinweise und Pflicht­informationen</h3> <br>
-        <span><h3>Datenschutz</h3></span> <br>
+        <span>
+            <h3>Datenschutz</h3>
+        </span> <br>
         <span>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen
             Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten
             vertraulich und entsprechend den gesetzlichen Datenschutzvorschriften
@@ -72,16 +70,13 @@
         </span>
         <br><br>
         <h3>Hinweis zur verantwortlichen Stelle</h3> <br>
-
         <span>Die verantwortliche Stelle für die Datenverarbeitung auf dieser
             Website ist: <br><br>
-
             <p>
                 Galina Antipin <br />
                 Schachtstraße 20 <br />
                 06577 Oberheldrungen <br />
             </p>
-
             <p>
                 Telefon: 015227783633 <br />
                 E-Mail: galina.antipin&#64;gmail.com
@@ -233,7 +228,6 @@
             Rechte einer anderen natürlichen oder juristischen Person oder aus
             Gründen eines wichtigen öffentlichen Interesses der Europäischen Union
             oder eines Mitgliedstaats verarbeitet werden.
-
             <br><br>
             Quelle: https://www.e-recht24.de -->
         </span>
