--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -9,6 +9,7 @@ section {
         color: #5988FF;
         font-family: 'Baloo 2';
         font-size: 98px;
+        margin-bottom: 2%;
     }
 }
 
@@ -16,6 +17,7 @@ h2 {
     color: #5988FF;
     font-family: 'Baloo 2';
     font-size: 38px;
+    margin-bottom: 2%;
 }
 
 .headline {
