--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -10,7 +10,7 @@
                     contributing to your projects with my work.
                 </p> <br>
                 <h3>Need a Frontend developer? <b>Contact me!</b></h3>
-                <a href="#landing-page"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
+                <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
                 </a>
             </div>
             <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
