--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,6 +7,7 @@
             <a href="#about-me">About me</a>
             <a href="#skills">Skills</a>
             <a href="#my-work">My work</a>  
+            <span>DE | EN</span>
         </nav>
     </section>
 </header>
