--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -32,13 +32,14 @@ nav {
     display: flex;
     align-items: center;
 
-    a {
+    a,span {
         position: relative;
         color: #5988FF;
         text-decoration: none;
         margin: 15px;
         transition: color 0.3s;
         font-size: 23px;
+        cursor: pointer;
 
         &::after {
             content: "";
