--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -72,10 +72,18 @@ h2 {
     text-align: center;
 
     img {
-        margin-right: 1%;
+        margin-right: 2%;
     }
 }
 
 .white-space-nowrap {
     white-space: nowrap;
+}
+
+.icons-section img:hover[src*="location-icon.png"] {
+    content: url('./../../../assets/img/location-icon-hover.png'); 
+}
+
+.icons-section img:hover[src*="remote-icon.png"] {
+    content: url('./../../../assets/img/remote-icon-hover.png'); 
 }
