edit hover effect on span element in skills component

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -68,14 +68,9 @@ h2 {
     align-items: center;
 }
 
-.icons-section {
-    text-align: center;
-
-    img {
-        margin-right: 2%;
-    }
+img {
+    margin-right: 10px;
 }
-
 .white-space-nowrap {
     white-space: nowrap;
 }
