--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -13,13 +13,13 @@
             <span class="scroll-span">SCROLL</span>
             <div class="scroll-down-line"></div>
             <div class="icon-wrapper">
-                <a href="https://github.com/galina-antipin">
+                <a href="https://github.com/galina-antipin" target="_blank" rel="noopener noreferrer">
                     <img src="./../../../assets/img/github-icon.png" alt="GitHub Icon">
                 </a>
                 <a href="#contact">
                     <img src="./../../../assets/img/mail-icon.png" alt="E-Mail Icon">
                 </a>
-                <a href="https://www.linkedin.com/in/galina-antipin/">
+                <a href="linkedin.com/in/galina-antipin-15157532b" target="_blank" rel="noopener noreferrer">
                     <img src="./../../../assets/img/linkedin-icon.png" alt="LinkedIn Icon">
                 </a>
             </div>
