linked linked in

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -19,7 +19,7 @@
                 <a href="#contact">
                     <img src="./../../../assets/img/mail-icon.png" alt="E-Mail Icon">
                 </a>
-                <a href="linkedin.com/in/galina-antipin-15157532b" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank" rel="noopener noreferrer">
                     <img src="./../../../assets/img/linkedin-icon.png" alt="LinkedIn Icon">
                 </a>
             </div>
