changed font sizes in rem

--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -21,12 +21,12 @@ section {
 h2 {
     font-family: 'Baloo 2';
     font-weight: 800;
-    font-size: 48px;
+    font-size: 3rem;
     color: #5988FF;
 }
 
 span {
     font-family: 'Montserrat';
-    font-size: 18px;
+    font-size: 1.125rem;
     color: black;
 }
