--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -12,7 +12,7 @@ section {
 
     h1 {
         font-family: 'Baloo 2';
-        font-size: 90px;
+        font-size: 5.625rem;
         font-weight: 800;
         color: #5988FF;
     }
@@ -20,7 +20,7 @@ section {
     h2 {
         color: #5988FF;
         font-family: 'Montserrat';
-        font-size: 32px;
+        font-size: 2rem;
         font-weight: 700;
     }
 
@@ -28,13 +28,13 @@ section {
         color: #5988FF;
         font-family: 'Montserrat';
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem; 
     }
 
     p {
         color: black;
         font-family: 'Montserrat';
-        font-size: 16px;
+        font-size: 1rem; 
         font-weight: 400;
     }
 
@@ -62,13 +62,13 @@ section {
 span {
     font-family: 'Montserrat';
     color: red;
-    font-size: 16px;
+    font-size: 1rem; 
 }
 
 p {
     color: black;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1rem; 
 }
 
 form {
