--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -10,16 +10,16 @@ section {
 h1 {
     font-family: 'Baloo 2';
     font-weight: 800;
-    font-size: 128px;
+    font-size: 8rem;
 }
 
 .first {
-    font-size: 138px;
+    font-size: 8.625rem;
 }
 
 span {
     font-family: 'Montserrat';
-    font-size: 64px;
+    font-size: 4rem;
 }
 
 .content-wrapper {
@@ -47,7 +47,7 @@ span {
 }
 
 .scroll-span {
-    font-size: 23px;
+    font-size: 1.4375rem;
     margin: 20px 0;
 }
 
