--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -8,7 +8,7 @@ section {
     h1 {
         color: #5988FF;
         font-family: 'Baloo 2';
-        font-size: 98px;
+        font-size: 6.125rem;
         margin-bottom: 2%;
     }
 }
@@ -16,7 +16,7 @@ section {
 h2 {
     color: #5988FF;
     font-family: 'Baloo 2';
-    font-size: 38px;
+    font-size: 2.375rem;
     margin-bottom: 2%;
 }
 
@@ -55,7 +55,7 @@ h2 {
     span {
         color: black;
         font-family: 'Montserrat';
-        font-size: 23px;
+        font-size: 1.4375rem;
         margin-bottom: 2%;
         font-weight: 400;
     }
