--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -1,4 +1,5 @@
 section {
+    width: 100%;
     display: flex;
     justify-content: center;
     padding-top: 6%;
@@ -8,7 +9,7 @@ section {
     background-position:
         30% 1.5%,
         80% 50%,
-        5% 50%,
+        -10% 40%,
         90% 15%,
         50% 99%;
     background-repeat: no-repeat;
@@ -23,7 +24,7 @@ section {
 
 p {
     color: #5988FF;
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 800;
     font-family: 'Baloo 2';
 }
@@ -33,8 +34,8 @@ span {
     margin-bottom: 2%;
     color: black;
     font-family: 'Montserrat';
-    font-size: 20px;
-    text-align: right;
+    font-size: 1.25rem;
+    width: 80%;
 }
 
 .portfolio-wrapper {
@@ -42,29 +43,35 @@ span {
     justify-content: space-between;
     width: 100%;
     margin-top: 8%;
+
+    &.reverse {
+        flex-direction: row-reverse;
+    }
 }
 
 .portfolio-headline {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    width: 50%;
 }
 
-.left-content {
+.description-content {
     display: flex;
     flex-direction: column;
     width: 50%;
-    align-items: flex-end;
+    align-items: flex-start;
+    justify-content: flex-end;
 }
 
 h2 {
     font-family: 'Montserrat';
-    font-size: 22px;
+    font-size:  1.375rem;
     font-weight: 400;
 }
 
 h3 {
     color: #5988FF;
-    font-size: 22px;
+    font-size:  1.375rem;
     font-weight: 600;
     font-family: 'Montserrat';
 }
@@ -72,15 +79,14 @@ h3 {
 .button-section {
     width: 40%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
-.right-content {
+.project-content {
     display: flex;
     width: 50%;
-    justify-content: flex-end;
+    justify-content: flex-start;
     transition: transform 0.2s ease;
-    padding-right: 2%;
 
     &:hover {
         transform: scale(1.2);
@@ -89,41 +95,33 @@ h3 {
     }
 }
 
-.space-between-buttons {
+.space-between {
     padding: 20px;
 }
 
 h1 {
     font-family: 'Baloo 2';
     color: #5988FF;
-    font-size: 96px;
+    font-size: 6rem;
     margin-bottom: 2%;
-}
-
-.left-content-middle {
-    display: flex;
-    justify-content: flex-end;
-    transition: transform 0.2s ease;
-
-    &:hover {
-        transform: scale(1.2);
-        cursor: pointer;
-        opacity: 0.7;
-    }
 }
 
 img {
     border-radius: 10px;
-    max-width: 80%
+    max-width: 99%;
 }
 
-.right-content-middle {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: flex-start;
-}
+.middle-container {
+    .project-content {
+        justify-content: flex-end;
+    }
 
-.text-align-left {
-    text-align: left;
+    .description-content {
+        align-items: flex-end;
+        text-align: right;
+    }
+
+    .button-section {
+        justify-content: flex-end
+    }   
 }
