--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -7,31 +7,31 @@ section {
 
     h1 {
         font-family: 'Baloo 2';
-        font-size: 45px;
+        font-size: 2.8125rem;
         margin-bottom: 2%;
     }
 
     h3 {
-        font-size: 24px;
+        font-size: 1.5rem;
         font-family: 'Montserrat';
         font-weight: 700;
         margin-bottom: 1%;
     }
 
     h4 {
-        font-size: 18px;
+        font-size: 1.125rem; 
         font-family: 'Montserrat';
         font-weight: 400;
     }
 
     span {
-        font-size: 32px;
+        font-size: 2rem;
         font-family: 'Montserrat';
         font-weight: 400;
     }
 
     p {
-        font-size: 16px;
+        font-size: 1rem;
         font-family: 'Montserrat';
         font-weight: 400;
     }
