--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -17,7 +17,7 @@ section {
 h1 {
     font-family: 'Baloo 2';
     font-weight: 800;
-    font-size: 96px;
+    font-size: 6rem;
     color: white;
     margin-bottom: 2%;
 }
@@ -51,3 +51,18 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
 }
+
+@media (max-width:730px){
+    img {
+        width: 50px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width:580px){
+    img {
+        width: 5px;
+        margin-bottom: 10px;
+    }
+}
+
