--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -4,12 +4,12 @@ section {
     justify-content: center;
     font-family: 'Montserrat';
     color: black;
-    font-size: 18px;
+    font-size: 1rem;
 
     h2 {
         font-family: 'Baloo 2';
         font-weight: 800;
-        font-size: 68px;
+        font-size: 4.25rem;
         color: #5988FF;
     }
 
