--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -12,7 +12,7 @@ footer {
     a {
         cursor: pointer;
         text-decoration: none;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-family: 'Montserrat';
     }
 }
@@ -45,7 +45,7 @@ footer {
 }
 
 p {
-    font-size: 23px;
+    font-size: 1.4375rem;
     font-family: 'Montserrat';
     margin-bottom: 10%;
     padding-top: 15%;
