--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -38,7 +38,7 @@ nav {
         text-decoration: none;
         margin: 15px;
         transition: color 0.3s;
-        font-size: 23px;
+        font-size: 1.4375rem;
         cursor: pointer;
 
         &::after {
