--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,13 +1,13 @@
 <header id="header">
     <section>
         <div>
-        <a href="/"><h1></h1></a>
+        <a href="/"><img src="./../../../../assets/img/logo.png" alt="Logo"></a>
         </div>
         <nav>
             <a href="#about-me">About me</a>
             <a href="#skills">Skills</a>
             <a href="#my-work">My work</a>  
-            <span>DE | EN</span>
+            <span>DE</span>|<span>EN</span>
         </nav>
     </section>
 </header>
