--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -8,10 +8,10 @@
             <a routerLink="imprint">Imprint</a>
         </div>
         <div class="footer-right">
-            <a href="" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/galina-antipin" target="_blank" rel="noopener noreferrer">
                 <img src='./../../../../assets/img/github-icon-white.png' alt="GitHub" />
             </a>
-            <a href="" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank" rel="noopener noreferrer">
                 <img src='./../../../../assets/img/linkedin-icon-white.png' alt="LinkedIn" />
             </a>
             <a href="#contact">
